kube/dev/dax-webserv-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dax-webserv-service
spec:
  selector:
    app: dax-webserv
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
