kube/dev/dax-webserv-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: dax-webserv-ingress
spec:
  rules:
  - host: lsst-pdac.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: dax-webserv-service
          servicePort: 5000
        path: /dev
